--- a/Trabalho/meuestilo.css
+++ b/Trabalho/meuestilo.css
@@ -2,20 +2,20 @@ body{
     padding-left: 11em;
     color: #FF1493;
     background-color: #8B008B;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
 }
 .ul{
     list-style-type: none;
     padding: 0;
     margin: 0;
-
     position: absolute;
     top: 2em;
     left: 1em;
-    width: 9em;
+    width: 9em
 }
 h1{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Geneva, Arial,
+          SunSans-Regular, sans-serif;
 }
 .li{
     background: white;
