--- a/Trabalho/meuestilo.css
+++ b/Trabalho/meuestilo.css
@@ -4,7 +4,7 @@ body{
     background-color: #8B008B;
     font-family: Georgia, "Times New Roman", Times, serif;
 }
-.ul{
+ul.navbar{
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -17,13 +17,13 @@ h1{
     font-family: Helvetica, Geneva, Arial,
           SunSans-Regular, sans-serif;
 }
-.li{
+ul.navbar li{
     background: white;
     margin: 0.5em 0;
     padding: 0.3em;
     border-right: 1em solid black;
 }
-.a{
+ul.navbar a{
     text-decoration: none;
 }
 a:link{
