--- a/Trabalho/meuestilo.css
+++ b/Trabalho/meuestilo.css
@@ -2,28 +2,28 @@ body{
     padding-left: 11em;
     color: #FF1493;
     background-color: #8B008B;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-ul.navbar{
+.ul{
     list-style-type: none;
     padding: 0;
     margin: 0;
+
     position: absolute;
     top: 2em;
     left: 1em;
-    width: 9em
+    width: 9em;
 }
 h1{
-    font-family: Helvetica, Geneva, Arial,
-          SunSans-Regular, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
-ul.navbar li{
+.li{
     background: white;
     margin: 0.5em 0;
     padding: 0.3em;
     border-right: 1em solid black;
 }
-ul.navbar a{
+.a{
     text-decoration: none;
 }
 a:link{
