--- a/Trabalho/meuestilo.css
+++ b/Trabalho/meuestilo.css
@@ -4,7 +4,7 @@ body{
     background-color: #8B008B;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.ul{
+.lista{
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -17,7 +17,7 @@ body{
 h1{
     font-family: Arial, Helvetica, sans-serif;
 }
-.li{
+.lista li{
     background: white;
     margin: 0.5em 0;
     padding: 0.3em;
